--- a/index.html
+++ b/index.html
@@ -2,11 +2,32 @@
  * @Author: xuyang
  * @Date: 2024-01-14 15:01:04
  * @LastEditors: xuyang
- * @LastEditTime: 2024-01-14 15:08:56
+ * @LastEditTime: 2024-01-14 18:30:33
  * @FilePath: \Live Server\index.html
  * @Description: 
  * 
  * Copyright (c) 2024 by xuyang, All Rights Reserved 
 -->
-Hello World Again!!
-My secend sententence!!
+
+<!DOCTYPE html>
+<html lang="en-US">
+  <html>
+    <head>
+      <mata charest="utf-8" />
+      <title>My First HTML Page</title>
+    </head>
+    <body>
+      <header>
+        <nav>
+          <ul>
+            <li><a href="hhtps://google.com"></a></li>
+          </ul>
+        </nav>
+      </header>
+      <h1>This is a Level 1 Heading</h1>
+      <p>This is my first paragraph.</p>
+      <p>Hello World Again!!we make it!!! My secend sententence!!</p>
+      <h2>This is a Level 2 Heading</h2>
+    </body>
+  </html>
+</html>
