--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <header>
         <nav>
           <ul>
-            <li><a href="hhtps://google.com"></a></li>
+            <li><a href="https://google.com"></a></li>
           </ul>
         </nav>
       </header>
