--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
  * @Author: xuyang
  * @Date: 2024-01-14 15:01:04
  * @LastEditors: xuyang
- * @LastEditTime: 2024-01-14 18:30:33
+ * @LastEditTime: 2024-01-14 19:09:16
  * @FilePath: \Live Server\index.html
  * @Description: 
  * 
@@ -20,7 +20,7 @@
       <header>
         <nav>
           <ul>
-            <li><a href="https://google.com"></a></li>
+            <li><a href="https://google.com">Google</a></li>
           </ul>
         </nav>
       </header>
