--- a/index.html
+++ b/index.html
@@ -2,6 +2,16 @@
  * @Author: xuyang
  * @Date: 2024-01-14 15:01:04
  * @LastEditors: xuyang
+ * @LastEditTime: 2024-01-14 19:11:55
+ * @FilePath: \Live Server\index.html
+ * @Description: 
+ * 
+ * Copyright (c) 2024 by xuyang, All Rights Reserved 
+-->
+<!--
+ * @Author: xuyang
+ * @Date: 2024-01-14 15:01:04
+ * @LastEditors: xuyang
  * @LastEditTime: 2024-01-14 19:09:16
  * @FilePath: \Live Server\index.html
  * @Description: 
@@ -20,7 +30,7 @@
       <header>
         <nav>
           <ul>
-            <li><a href="https://google.com">Google</a></li>
+            <li><a href="page2.html">page2</a></li>
           </ul>
         </nav>
       </header>
