--- a/From Web for Refence/web-resume-resume-master/index2.html
+++ b/From Web for Refence/web-resume-resume-master/index2.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>求职简历</title>
+  <title>缝纫工程师到此一游</title>
   <link rel="stylesheet" href="./css/base.css">
   <script src="./js/jq.js"></script>
   <link rel="stylesheet" href="./css/index1.css">
@@ -59,7 +59,7 @@
 
 
       <div class="col">
-        <span>个人简历</span>
+        <span>缝纫工程师到此一游</span>
         <!-- 右边操作栏 -->
 
         <div class="header-right">
@@ -72,11 +72,11 @@
             <!-- 栏目 -->
             <ul class="header-nav">
               <li class="active"><a href="./index2.html">主页</a></li>
-              <li><a href="./home.html">项目</a></li>
-              <li><a href="./resume.html">经验</a></li>
-              <li><a href="./contact.html">联系</a></li>
-              <li><a href="./blog.html">博客</a></li>
-              <li><a href="./live.html">其他</a></li>
+              <li><a href="./home.html">1</a></li>
+              <li><a href="./resume.html">1</a></li>
+              <li><a href="./contact.html">1</a></li>
+              <li><a href="./blog.html">1</a></li>
+              <li><a href="./live.html">1</a></li>
             </ul>
             <!-- 开关灯 -->
             <span class="kaig-bottm">
@@ -138,9 +138,9 @@
               </span>
               <img src="./img/toux.jpg" alt="">
             </div>
-            <h3>wttAndroid的个人简历</h3>
+            <h3>kenbio的个人简历</h3>
             <p class="me-hover">
-              <span>其实，我的愿望是世界和平！</span>
+              <span>技术，掌握在手里才是实力！</span>
             </p>
           </div>
           <div class="borderbotm"></div>
@@ -185,15 +185,15 @@
           <div class="mecar-bottm">
             <div>
               <span class="mecarbottm-key">毕业院校</span>
-              <span class="mecarbottm-value">山西传媒学院</span>
+              <span class="mecarbottm-value">北京化工大学</span>
             </div>
             <div>
               <span class="mecarbottm-key">所在城市</span>
-              <span class="mecarbottm-value">山西 晋城</span>
+              <span class="mecarbottm-value">北京 昌平</span>
             </div>
             <div>
               <span class="mecarbottm-key">年级</span>
-              <span class="mecarbottm-value">23届毕业生</span>
+              <span class="mecarbottm-value">26届毕业生</span>
             </div>
 
           </div>
